--- a/.github/deploy.yml
+++ b/.github/deploy.yml
@@ -1,48 +1,67 @@
-name: Deployment Pipeline
-
+name: CD Pipeline
 on:
   push:
     branches:
-       - main
-
+      - main  # Trigger this pipeline on pushes to the main branch
 jobs:
-   deploy:
-      runs-on: ubuntu-latest
-      
-      steps:
-         - name: Checkout code
-           uses: actions/checkout@v2
+  deploy:
+    runs-on: ubuntu-latest
+    steps:
+      # Step 1: Checkout the code from the repository
+      - name: Checkout Code
+        uses: actions/checkout@v3
+      # Step 4: SSH into the EC2 instance to deploy the application
+      - name: SSH to EC2 and Deploy
+        uses: appleboy/ssh-action@v0.1.5
+        with:
+          host: ${{ secrets.PUBLIC_IP }}  # GitHub Secret for EC2 public IP
+          username: ubuntu  # Assuming you are using the default Ubuntu user for EC2
+          key: ${{ secrets.SSH_PRIVATE_KEY }}  # GitHub Secret for SSH private key
+          script: |
+            # Update package index and install dependencies
+            sudo apt-get update -y
+            sudo apt-get install -y apt-transport-https ca-certificates curl software-properties-common
+            # Add Docker's official GPG key
+            curl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo apt-key add -
+            sudo add-apt-repository "deb [arch=amd64] https://download.docker.com/linux/ubuntu $(lsb_release -cs) stable"
+            # Install Docker
+            sudo apt-get update -y
+            sudo apt-get install -y docker-ce docker-ce-cli containerd.io
+            # Install Docker Compose
+            sudo curl -L "https://github.com/docker/compose/releases/download/v2.20.2/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
+            sudo chmod +x /usr/local/bin/docker-compose
+            # Verify installations
+            docker --version
+            docker-compose --version
+            # Clone the project repository to the EC2 instance
+            cd /home/ubuntu/
+            if [ ! -d "fastapi-book-project" ]; then
+              git clone https://github.com//fastapi-book-project.git
+            else
+              cd fastapi-book-project
+              git pull origin main  # Pull latest changes from the main branch
+            fi
+            # Navigate to the project folder and build/restart Docker containers
+            cd /home/ubuntu/fastapi-book-project/
+            sudo docker-compose up -d --build # Rebuild and start containers in detached mode
 
-         - name: Set up Python
-           uses: actions/setup-python@v2
-           with:
-             python-version: '3.8'
-
-         - name: Install dependencies
-           run: |
-              python -m pip install --upgrade pip
-              pip install -r requirements.txt
-
-         - name: Deploy to server@165.227.238.116
-           env:
-             SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
-           run: |
-             mkdir -p ~/.ssh
-             echo "$SSH_PRIVATE_KEY" > ~/.ssh/id_rsa
-             chmod 600 ~/.ssh/id_rsa
-             mkdir -p ~/ssh
-             ssh-keyscan -H 165.227.238.116 >> ~/ssh/known_hosts
-              ssh -o StrictHostKeyChecking=no ubuntu@165.227.238.116 -i ~/.ssh/id_rsa << 'EOF'
-              cd fastapi-book-project || exit 1  # Ensure the folder exists
-              git pull origin main  # Pull latest code
-              sudo docker stop fastapi-app || true  # Stop running container if exists
-              sudo docker rm fastapi-app || true  # Remove old container
-              sudo docker rmi fastapi-app || true  # Remove old image
-              sudo docker build -t fastapi-app .  # Build new image
-              sudo docker run -d --name fastapi-app -p 8000:8000 fastapi-app  # Run new container
-              sudo docker system prune -f  # Cleanup unused images (optional)
-             EOF
 
 
-              
-              
+
+
+
+
+
+
+
+
+Message noxxspring:three:
+
+
+
+
+
+
+
+
+
