--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,29 +1,23 @@
-
 name: CI Pipeline
-
 on:
   pull_request:
     branches:
-      - main
-
+      - main  # Run the workflow when a PR is opened against `main`
 jobs:
   test:
-    runs-on: ubuntu-latest
-
+    runs-on: ubuntu-latest  # Run the tests on Ubuntu
     steps:
       - name: Checkout code
-        uses: actions/checkout@v2
-
+        uses: actions/checkout@v4  # Fetch the code from GitHub
       - name: Set up Python
-        uses: actions/setup-python@v2
+        uses: actions/setup-python@v5
         with:
-          python-version: '3.8'  # Set the Python version you are using
-
+          python-version: '3.10'  # Use Python 3.10
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r requirements.txt  # Make sure `requirements.txt` contains your dependencies
-
-      - name: Run tests with pytest
+          pip install -r requirements.txt
+          pip install pytest  # Install pytest
+      - name: Run tests
         run: |
-          pytest --maxfail=1 --disable-warnings -q
+          pytest  # Run the test suite
