--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,23 +1,24 @@
 name: CI Pipeline
+
 on:
   pull_request:
     branches:
-      - main  # Run the workflow when a PR is opened against `main`
+      - main  # This specifies that the workflow should run on PRs to the `main` branch
+
 jobs:
   test:
-    runs-on: ubuntu-latest  # Run the tests on Ubuntu
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout code
-        uses: actions/checkout@v4  # Fetch the code from GitHub
+        uses: actions/checkout@v3
+
       - name: Set up Python
-        uses: actions/setup-python@v5
+        uses: actions/setup-python@v4
         with:
-          python-version: '3.10'  # Use Python 3.10
+          python-version: '3.9'
+
       - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
-          pip install pytest  # Install pytest
+        run: pip install -r requirements.txt
+
       - name: Run tests
-        run: |
-          pytest  # Run the test suite
+        run: pytest  
