--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,16 +1,17 @@
 version: '3.8'
 services:
-  fastapi:
+  app:
     build: .
     container_name: fastapi-app
     ports:
-      - "8000:8000"  # Expose FastAPI app to port 8000
+      - "8000:8000"
+
   nginx:
     image: nginx:latest
-    container_name: nginx
+    container_name: fastapi-nginx
     volumes:
-      - ./nginx.conf:/etc/nginx/conf.d/default.conf # Mount custom nginx.conf
+      - ./nginx.conf:/etc/nginx/conf.d/default.conf
     ports:
-      - "80:80"  # Expose Nginx to port 80
+      - "80:80"
     depends_on:
-      - fastapi
+      - app
